--- a/public/css/abstracts/typography.css
+++ b/public/css/abstracts/typography.css
@@ -1,13 +1,11 @@
 :root {
   --ff-body: "Heebo", sans-serif;
   --heading: "Oswaltd", sans-serif;
-  --clr-primary-500: hsl(60 100% 50%);
-  --clr-neutral-900: hsl(0 0% 0%);
-  --clr-neutral-100: hsl(0 0% 100%);
   --fs-xl: 5rem;
   --fs-600: 1.5rem;
   --fs-500: 1.25rem;
   --fs-400: 1rem;
+  --ff-primary: "Barlow", Sans-serif;
 }
 
 @media (min-width: 40em) {
@@ -17,7 +15,4 @@
     --fs-500: 1.25rem;
     --fs-400: 1.125rem;
   }
-}
-h1 {
-  color: var(--clr-neutral-100);
 }
