--- a/src/sass/abstracts/typography.scss
+++ b/src/sass/abstracts/typography.scss
@@ -2,14 +2,14 @@
   --ff-body: "Heebo", sans-serif;
   --heading: "Oswaltd", sans-serif;
 
-  --clr-primary-500: hsl(60 100% 50%);
-  --clr-neutral-900: hsl(0 0% 0%);
-  --clr-neutral-100: hsl(0 0% 100%);
-
+  // Font sizes
   --fs-xl: 5rem;
   --fs-600: 1.5rem;
   --fs-500: 1.25rem;
   --fs-400: 1rem;
+
+  // Fonts
+  --ff-primary: "Barlow", Sans-serif;
 }
 
 @media (min-width: 40em) {
@@ -19,8 +19,4 @@
     --fs-500: 1.25rem;
     --fs-400: 1.125rem;
   }
-}
-
-h1 {
-  color: var(--clr-neutral-100);
 }
