--- a/src/sass/abstracts/page.scss
+++ b/src/sass/abstracts/page.scss
@@ -1,3 +1,4 @@
+// Page Reset
 *,
 *::before,
 *::after {
@@ -12,11 +13,6 @@ p,
 blockquote {
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: var(--ff-body);
-  line-height: 1.2;
 }
 
 blockquote {
@@ -36,4 +32,19 @@ blockquote::after {
 
 h2 {
   font-size: var(--fs-600);
+}
+
+// Page container
+.container {
+  max-width: 1220px;
+  margin-inline: auto;
+}
+
+@media (min-width: 40em) {
+  :root {
+    --fs-xl: 7rem;
+    --fs-600: 2rem;
+    --fs-500: 1.25rem;
+    --fs-400: 1.125rem;
+  }
 }
