--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -1,4 +1,20 @@
+.header {
+  display: flex;
+  margin-inline: auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo {
+  flex-grow: 0;
+}
+
 .header__social {
+  flex-grow: 2;
+  margin-inline-start: 3rem;
+}
+
+.header__social__icon {
   width: 1rem;
   height: 1rem;
 }
