--- a/public/css/abstracts/index.css
+++ b/public/css/abstracts/index.css
@@ -66,7 +66,7 @@ h2 {
   margin-inline: auto;
 }
 
-@media (min-width: 40em) {
+@media (min-width: 40rem) {
   :root {
     --fs-xl: 7rem;
     --fs-600: 2rem;
@@ -80,4 +80,5 @@ h2 {
   --cl-neutral-100: hsl(0 0% 100%);
   --cl-twitter: #1d9bf0;
   --cl-youtube: #ff0000;
+  --cl-github: #727272;
 }
