--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,7 @@ h2 {
   margin-inline: auto;
 }
 
-@media (min-width: 40em) {
+@media (min-width: 40rem) {
   :root {
     --fs-xl: 7rem;
     --fs-600: 2rem;
@@ -80,25 +80,36 @@ h2 {
   --cl-neutral-100: hsl(0 0% 100%);
   --cl-twitter: #1d9bf0;
   --cl-youtube: #ff0000;
-}
-
-.header {
-  display: flex;
-  margin-inline: auto;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header__logo {
-  flex-grow: 0;
-}
-
-.header__social {
-  flex-grow: 2;
-  margin-inline-start: 3rem;
+  --cl-github: #727272;
 }
 
 .header__social__icon {
+  color: #000;
   width: 1rem;
   height: 1rem;
+}
+.header__social__icon--twitter:hover, .header__social__icon--twitter:focus {
+  color: var(--cl-twitter);
+}
+.header__social__icon--youtube:hover, .header__social__icon--youtuve:focus {
+  color: var(--cl-youtube);
+}
+.header__social__icon--github:hover, .header__social__icon--github:focus {
+  color: var(--cl-github);
+}
+
+@media (min-width: 600px) {
+  .header {
+    display: flex;
+    margin-inline: auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .header__logo {
+    flex-grow: 0;
+  }
+  .header__social {
+    flex-grow: 2;
+    margin-inline-start: 3rem;
+  }
 }
