--- a/src/sass/abstracts/page.scss
+++ b/src/sass/abstracts/page.scss
@@ -40,7 +40,7 @@ h2 {
   margin-inline: auto;
 }
 
-@media (min-width: 40em) {
+@media (min-width: 40rem) {
   :root {
     --fs-xl: 7rem;
     --fs-600: 2rem;
