--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,21 +1,37 @@
 // Header navigation
-.header {
-  display: flex;
-  margin-inline: auto;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header__logo {
-  flex-grow: 0;
-}
-
-.header__social {
-  flex-grow: 2;
-  margin-inline-start: 3rem;
-}
-
 .header__social__icon {
+  color: #000;
   width: 1rem;
   height: 1rem;
+
+  &--twitter:hover,
+  &--twitter:focus {
+    color: var(--cl-twitter);
+  }
+  &--youtube:hover,
+  &--youtuve:focus {
+    color: var(--cl-youtube);
+  }
+  &--github:hover,
+  &--github:focus {
+    color: var(--cl-github);
+  }
+}
+
+@media (min-width: 600px) {
+  .header {
+    display: flex;
+    margin-inline: auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header__logo {
+    flex-grow: 0;
+  }
+
+  .header__social {
+    flex-grow: 2;
+    margin-inline-start: 3rem;
+  }
 }
