--- a/public/css/abstracts/typography.css
+++ b/public/css/abstracts/typography.css
@@ -5,7 +5,15 @@
   --fs-600: 1.5rem;
   --fs-500: 1.25rem;
   --fs-400: 1rem;
-  --ff-primary: "Barlow", Sans-serif;
+  --pd-xl: 5rem;
+  --pd-600: 1.5rem;
+  --pd-500: 1.25rem;
+  --pd-400: 1rem;
+  --mg-xl: 5rem;
+  --mg-600: 1.5rem;
+  --mg-500: 1.25rem;
+  --mg-400: 1rem;
+  --ff-primary: "Barlow", sans-serif;
 }
 
 body,
@@ -15,6 +23,7 @@ h3,
 h4,
 h5,
 h6,
+p,
 a,
 li {
   font-family: var(--ff-primary);
@@ -23,5 +32,5 @@ li {
 
 a {
   text-decoration: none;
-  color: var(--ff-body);
+  color: var(--cl-neutral-black);
 }
