--- a/public/css/abstracts/color.css
+++ b/public/css/abstracts/color.css
@@ -1,7 +1,7 @@
 :root {
-  --cl-primary-500: #1b4bf7;
-  --cl-neutral-900: rgb(27, 27, 27);
-  --cl-neutral-100: hsl(0 0% 100%);
+  --cl-primary-blue: #1b4bf7;
+  --cl-neutral-black: rgb(27, 27, 27);
+  --cl-neutral-white: hsl(0 0% 100%);
   --cl-twitter: #1d9bf0;
   --cl-youtube: #ff0000;
   --cl-github: #727272;
