--- a/public/css/abstracts/page.css
+++ b/public/css/abstracts/page.css
@@ -29,10 +29,6 @@ blockquote::after {
   content: close-quote;
 }
 
-h2 {
-  font-size: var(--fs-600);
-}
-
 .container {
   max-width: 1220px;
   margin-inline: auto;
@@ -45,4 +41,24 @@ h2 {
     --fs-500: 1.25rem;
     --fs-400: 1.125rem;
   }
+}
+:root {
+  --fs-xl: 5rem;
+  --fs-600: 1.5rem;
+  --fs-500: 1.25rem;
+  --fs-400: 1rem;
+  --fs-300: 0.5rem;
+  --fs-200: 0.25rem;
+  --pd-xl: 5rem;
+  --pd-600: 1.5rem;
+  --pd-500: 1.25rem;
+  --pd-400: 1rem;
+  --pd-300: 0.5rem;
+  --pd-200: 0.25rem;
+  --mg-xl: 5rem;
+  --mg-600: 1.5rem;
+  --mg-500: 1.25rem;
+  --mg-400: 1rem;
+  --mg-300: 0.5rem;
+  --mg-200: 0.25rem;
 }
