--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -1,7 +1,39 @@
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-inline: auto;
+  padding-inline: 1.5rem;
+  margin-block-start: var(--mg-500);
+}
+
+.header__social {
+  margin-block-start: var(--mg-300);
+}
+
+.header__social__link {
+  padding-inline: var(--pd-200);
+}
+
+.header__nav {
+  margin-block-start: var(--mg-300);
+}
+
+.header__nav__link {
+  margin-inline: var(--mg-200);
+}
+
+.header__nav__btn {
+  display: block;
+}
+
 .header__social__icon {
   color: #000;
   width: 1rem;
   height: 1rem;
+}
+.header__social__icon--twitter, .header__social__icon--youtube, .header__social__icon--github {
+  transition: all 0.3s ease-in-out;
 }
 .header__social__icon--twitter:hover, .header__social__icon--twitter:focus {
   color: var(--cl-twitter);
@@ -13,13 +45,14 @@
   border-radius: 50%;
 }
 .header__social__icon--github:hover, .header__social__icon--github:focus {
-  color: var(--cl-neutral-100);
+  color: var(--cl-neutral-white);
   background-color: #000;
 }
 
 @media (min-width: 600px) {
   .header {
     display: flex;
+    flex-direction: row;
     margin-inline: auto;
     justify-content: space-between;
     align-items: center;
