--- a/src/sass/abstracts/color.scss
+++ b/src/sass/abstracts/color.scss
@@ -1,8 +1,8 @@
 :root {
   // Main colors
-  --cl-primary-500: #1b4bf7;
-  --cl-neutral-900: rgb(27, 27, 27);
-  --cl-neutral-100: hsl(0 0% 100%);
+  --cl-primary-blue: #1b4bf7;
+  --cl-neutral-black: rgb(27, 27, 27);
+  --cl-neutral-white: hsl(0 0% 100%);
 
   // Social colors
   --cl-twitter: #1d9bf0;
