--- a/src/sass/abstracts/page.scss
+++ b/src/sass/abstracts/page.scss
@@ -30,10 +30,6 @@ blockquote::after {
   content: close-quote;
 }
 
-h2 {
-  font-size: var(--fs-600);
-}
-
 // Page container
 .container {
   max-width: 1220px;
@@ -47,4 +43,30 @@ h2 {
     --fs-500: 1.25rem;
     --fs-400: 1.125rem;
   }
+}
+
+:root {
+  // Font sizes
+  --fs-xl: 5rem;
+  --fs-600: 1.5rem;
+  --fs-500: 1.25rem;
+  --fs-400: 1rem;
+  --fs-300: 0.5rem;
+  --fs-200: 0.25rem;
+
+  // Padding
+  --pd-xl: 5rem;
+  --pd-600: 1.5rem;
+  --pd-500: 1.25rem;
+  --pd-400: 1rem;
+  --pd-300: 0.5rem;
+  --pd-200: 0.25rem;
+
+  // Margin
+  --mg-xl: 5rem;
+  --mg-600: 1.5rem;
+  --mg-500: 1.25rem;
+  --mg-400: 1rem;
+  --mg-300: 0.5rem;
+  --mg-200: 0.25rem;
 }
