--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,6 @@
 :root {
   --ff-body: "Heebo", sans-serif;
   --heading: "Oswald", sans-serif;
-  --fs-xl: 5rem;
-  --fs-600: 1.5rem;
-  --fs-500: 1.25rem;
-  --fs-400: 1rem;
-  --pd-xl: 5rem;
-  --pd-600: 1.5rem;
-  --pd-500: 1.25rem;
-  --pd-400: 1rem;
-  --mg-xl: 5rem;
-  --mg-600: 1.5rem;
-  --mg-500: 1.25rem;
-  --mg-400: 1rem;
   --ff-primary: "Barlow", sans-serif;
 }
 
@@ -67,6 +55,7 @@ blockquote::after {
 }
 
 .container {
+  width: 80%;
   max-width: 1220px;
   margin-inline: auto;
 }
@@ -117,9 +106,30 @@ blockquote::after {
   padding-inline: 1.5rem;
   margin-block-start: var(--mg-500);
 }
+@media (min-width: 600px) {
+  .header {
+    display: flex;
+    flex-direction: row;
+    margin-inline: auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (min-width: 600px) {
+  .header__logo {
+    flex-grow: 0;
+  }
+}
 
 .header__social {
   margin-block-start: var(--mg-300);
+}
+@media (min-width: 600px) {
+  .header__social {
+    flex-grow: 2;
+    margin-inline-start: 3rem;
+  }
 }
 
 .header__social__link {
@@ -132,6 +142,11 @@ blockquote::after {
 
 .header__nav__link {
   margin-inline: var(--mg-200);
+}
+@media (min-width: 600px) {
+  .header__nav__link {
+    margin-inline-end: var(--mg-600);
+  }
 }
 
 .header__nav__btn {
@@ -158,21 +173,4 @@ blockquote::after {
 .header__social__icon--github:hover, .header__social__icon--github:focus {
   color: var(--cl-neutral-white);
   background-color: #000;
-}
-
-@media (min-width: 600px) {
-  .header {
-    display: flex;
-    flex-direction: row;
-    margin-inline: auto;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .header__logo {
-    flex-grow: 0;
-  }
-  .header__social {
-    flex-grow: 2;
-    margin-inline-start: 3rem;
-  }
 }
