--- a/src/sass/abstracts/_typography.scss
+++ b/src/sass/abstracts/_typography.scss
@@ -1,18 +1,8 @@
 :root {
   --ff-body: "Heebo", sans-serif;
   --heading: "Oswald", sans-serif;
-  --fs-xl: 5rem;
-  --fs-600: 1.5rem;
-  --fs-500: 1.25rem;
-  --fs-400: 1rem;
-  --pd-xl: 5rem;
-  --pd-600: 1.5rem;
-  --pd-500: 1.25rem;
-  --pd-400: 1rem;
-  --mg-xl: 5rem;
-  --mg-600: 1.5rem;
-  --mg-500: 1.25rem;
-  --mg-400: 1rem;
+
+  // Fonts
   --ff-primary: "Barlow", sans-serif;
 }
 
