--- a/public/css/abstracts/index.css
+++ b/public/css/abstracts/index.css
@@ -1,18 +1,6 @@
 :root {
   --ff-body: "Heebo", sans-serif;
   --heading: "Oswald", sans-serif;
-  --fs-xl: 5rem;
-  --fs-600: 1.5rem;
-  --fs-500: 1.25rem;
-  --fs-400: 1rem;
-  --pd-xl: 5rem;
-  --pd-600: 1.5rem;
-  --pd-500: 1.25rem;
-  --pd-400: 1rem;
-  --mg-xl: 5rem;
-  --mg-600: 1.5rem;
-  --mg-500: 1.25rem;
-  --mg-400: 1rem;
   --ff-primary: "Barlow", sans-serif;
 }
 
@@ -67,6 +55,7 @@ blockquote::after {
 }
 
 .container {
+  width: 80%;
   max-width: 1220px;
   margin-inline: auto;
 }
