--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -1,3 +1,69 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+p,
+blockquote {
+  margin: 0;
+  padding: 0;
+}
+
+blockquote {
+  font-size: var(--fs-600);
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+blockquote::before {
+  content: open-quote;
+}
+
+blockquote::after {
+  content: close-quote;
+}
+
+.container {
+  width: 80%;
+  max-width: 1220px;
+  margin-inline: auto;
+}
+
+@media (min-width: 40rem) {
+  :root {
+    --fs-xl: 7rem;
+    --fs-600: 2rem;
+    --fs-500: 1.25rem;
+    --fs-400: 1.125rem;
+  }
+}
+:root {
+  --fs-xl: 5rem;
+  --fs-600: 1.5rem;
+  --fs-500: 1.25rem;
+  --fs-400: 1rem;
+  --fs-300: 0.5rem;
+  --fs-200: 0.25rem;
+  --pd-xl: 5rem;
+  --pd-600: 1.5rem;
+  --pd-500: 1.25rem;
+  --pd-400: 1rem;
+  --pd-300: 0.5rem;
+  --pd-200: 0.25rem;
+  --mg-xl: 5rem;
+  --mg-600: 1.5rem;
+  --mg-500: 1.25rem;
+  --mg-400: 1rem;
+  --mg-300: 0.5rem;
+  --mg-200: 0.25rem;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -6,7 +72,7 @@
   padding-inline: 1.5rem;
   margin-block-start: var(--mg-500);
 }
-@media (min-width: 600px) {
+@media (min-width: 640px) {
   .header {
     display: flex;
     flex-direction: row;
@@ -16,16 +82,20 @@
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 640px) {
   .header__logo {
     flex-grow: 0;
   }
 }
 
+.header__logo__heading {
+  font-weight: 400;
+}
+
 .header__social {
   margin-block-start: var(--mg-300);
 }
-@media (min-width: 600px) {
+@media (min-width: 640px) {
   .header__social {
     flex-grow: 2;
     margin-inline-start: 3rem;
@@ -43,7 +113,7 @@
 .header__nav__link {
   margin-inline: var(--mg-200);
 }
-@media (min-width: 600px) {
+@media (min-width: 640px) {
   .header__nav__link {
     margin-inline-end: var(--mg-600);
   }
