--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -144,3 +144,8 @@ blockquote::after {
   color: var(--cl-neutral-white);
   background-color: #000;
 }
+
+.hero__image {
+  display: block;
+  max-width: 100%;
+}
