--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -1,48 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-body,
-h1,
-h2,
-h3,
-p,
-blockquote {
-  margin: 0;
-  padding: 0;
-}
-
-blockquote {
-  font-size: var(--fs-600);
-  line-height: 1.2;
-  text-align: center;
-  margin-bottom: 1em;
-}
-
-blockquote::before {
-  content: open-quote;
-}
-
-blockquote::after {
-  content: close-quote;
-}
-
-.container {
-  width: 80%;
-  max-width: 1220px;
-  margin-inline: auto;
-}
-
-@media (min-width: 40rem) {
-  :root {
-    --fs-xl: 7rem;
-    --fs-600: 2rem;
-    --fs-500: 1.25rem;
-    --fs-400: 1.125rem;
-  }
-}
 :root {
   --fs-xl: 5rem;
   --fs-600: 1.5rem;
@@ -51,12 +6,18 @@ blockquote::after {
   --fs-300: 0.5rem;
   --fs-200: 0.25rem;
   --pd-xl: 5rem;
+  --pd-900: 4rem;
+  --pd-800: 3rem;
+  --pd-700: 2rem;
   --pd-600: 1.5rem;
   --pd-500: 1.25rem;
   --pd-400: 1rem;
   --pd-300: 0.5rem;
   --pd-200: 0.25rem;
   --mg-xl: 5rem;
+  --mg-900: 4rem;
+  --mg-800: 3rem;
+  --mg-700: 2rem;
   --mg-600: 1.5rem;
   --mg-500: 1.25rem;
   --mg-400: 1rem;
@@ -98,7 +59,7 @@ blockquote::after {
 @media (min-width: 640px) {
   .header__social {
     flex-grow: 2;
-    margin-inline-start: 3rem;
+    margin-inline-start: var(--mg-800);
   }
 }
 
@@ -106,8 +67,24 @@ blockquote::after {
   padding-inline: var(--pd-200);
 }
 
+.social-image-container {
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media (min-width: 640px) {
+  .social-image-container {
+    display: block;
+  }
+}
+
 .header__nav {
+  display: none;
   margin-block-start: var(--mg-300);
+}
+@media (min-width: 640px) {
+  .header__nav {
+    display: block;
+  }
 }
 
 .header__nav__link {
