--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -26,8 +26,7 @@
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   align-items: center;
   margin-inline: auto;
   padding-inline: 1.5rem;
@@ -35,8 +34,8 @@
 }
 @media (min-width: 640px) {
   .header {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
     margin-inline: auto;
     justify-content: space-between;
     align-items: center;
@@ -65,6 +64,12 @@
 
 .header__social__link {
   padding-inline: var(--pd-200);
+}
+
+.header__image {
+  display: block;
+  max-width: 95%;
+  margin-inline: auto;
 }
 
 .social-image-container {
@@ -120,9 +125,4 @@
 .header__social__icon--github:hover, .header__social__icon--github:focus {
   color: var(--cl-neutral-white);
   background-color: #000;
-}
-
-.hero__image {
-  display: block;
-  max-width: 100%;
 }
