--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,16 +3,15 @@
 
 // Header navigation
 .header {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   align-items: center;
   margin-inline: auto;
   padding-inline: 1.5rem;
   margin-block-start: var(--mg-500);
 
   @include media.for-tablet(width.$tablet) {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
     margin-inline: auto;
     justify-content: space-between;
     align-items: center;
@@ -39,6 +38,12 @@
 
 .header__social__link {
   padding-inline: var(--pd-200);
+}
+
+.header__image {
+  display: block;
+  max-width: 95%;
+  margin-inline: auto;
 }
 
 // Navigation
