--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -25,6 +25,11 @@
   --mg-200: 0.25rem;
 }
 
+@media (max-width: 360px) {
+  .container {
+    width: 100%;
+  }
+}
 .header {
   display: grid;
   align-items: center;
@@ -42,6 +47,9 @@
   }
 }
 
+.header__logo {
+  margin-inline-start: auto;
+}
 @media (min-width: 640px) {
   .header__logo {
     flex-grow: 0;
@@ -53,7 +61,7 @@
 }
 
 .header__social {
-  margin-block-start: var(--mg-300);
+  margin-inline: auto;
 }
 @media (min-width: 640px) {
   .header__social {
@@ -67,9 +75,9 @@
 }
 
 .header__image {
-  display: block;
-  max-width: 95%;
+  max-width: 100%;
   margin-inline: auto;
+  margin-block: var(--mg-500);
 }
 
 .social-image-container {
