--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -25,17 +25,10 @@
   --mg-200: 0.25rem;
 }
 
-@media (max-width: 360px) {
-  .container {
-    width: 100%;
-  }
-}
 .header {
   display: grid;
   align-items: center;
   margin-inline: auto;
-  padding-inline: 1.5rem;
-  margin-block-start: var(--mg-500);
 }
 @media (min-width: 640px) {
   .header {
@@ -78,6 +71,15 @@
   max-width: 100%;
   margin-inline: auto;
   margin-block: var(--mg-500);
+}
+@media (min-width: 640px) {
+  .header__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40%;
+    margin-block: 0;
+  }
 }
 
 .social-image-container {
