--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,33 @@ a {
   color: var(--cl-neutral-black);
 }
 
+:root {
+  --fs-xl: 5rem;
+  --fs-600: 1.5rem;
+  --fs-500: 1.25rem;
+  --fs-400: 1rem;
+  --fs-300: 0.5rem;
+  --fs-200: 0.25rem;
+  --pd-xl: 5rem;
+  --pd-900: 4rem;
+  --pd-800: 3rem;
+  --pd-700: 2rem;
+  --pd-600: 1.5rem;
+  --pd-500: 1.25rem;
+  --pd-400: 1rem;
+  --pd-300: 0.5rem;
+  --pd-200: 0.25rem;
+  --mg-xl: 5rem;
+  --mg-900: 4rem;
+  --mg-800: 3rem;
+  --mg-700: 2rem;
+  --mg-600: 1.5rem;
+  --mg-500: 1.25rem;
+  --mg-400: 1rem;
+  --mg-300: 0.5rem;
+  --mg-200: 0.25rem;
+}
+
 *,
 *::before,
 *::after {
@@ -55,9 +82,14 @@ blockquote::after {
 }
 
 .container {
-  width: 90%;
-  max-width: 1220px;
-  margin-inline: auto;
+  width: 100%;
+}
+@media (min-width: 640px) {
+  .container {
+    width: 80%;
+    max-width: 1220px;
+    margin-inline: auto;
+  }
 }
 
 @media (min-width: 40rem) {
@@ -77,44 +109,10 @@ blockquote::after {
   --cl-github: #727272;
 }
 
-:root {
-  --fs-xl: 5rem;
-  --fs-600: 1.5rem;
-  --fs-500: 1.25rem;
-  --fs-400: 1rem;
-  --fs-300: 0.5rem;
-  --fs-200: 0.25rem;
-  --pd-xl: 5rem;
-  --pd-900: 4rem;
-  --pd-800: 3rem;
-  --pd-700: 2rem;
-  --pd-600: 1.5rem;
-  --pd-500: 1.25rem;
-  --pd-400: 1rem;
-  --pd-300: 0.5rem;
-  --pd-200: 0.25rem;
-  --mg-xl: 5rem;
-  --mg-900: 4rem;
-  --mg-800: 3rem;
-  --mg-700: 2rem;
-  --mg-600: 1.5rem;
-  --mg-500: 1.25rem;
-  --mg-400: 1rem;
-  --mg-300: 0.5rem;
-  --mg-200: 0.25rem;
-}
-
-@media (max-width: 360px) {
-  .container {
-    width: 100%;
-  }
-}
 .header {
   display: grid;
   align-items: center;
   margin-inline: auto;
-  padding-inline: 1.5rem;
-  margin-block-start: var(--mg-500);
 }
 @media (min-width: 640px) {
   .header {
@@ -157,6 +155,15 @@ blockquote::after {
   max-width: 100%;
   margin-inline: auto;
   margin-block: var(--mg-500);
+}
+@media (min-width: 640px) {
+  .header__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40%;
+    margin-block: 0;
+  }
 }
 
 .social-image-container {
