--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,14 +81,19 @@ blockquote::after {
   content: close-quote;
 }
 
+button {
+  border: none;
+}
+
 .container {
   width: 100%;
 }
 @media (min-width: 640px) {
   .container {
+    position: relative;
     width: 80%;
     max-width: 1220px;
-    margin-inline: auto;
+    margin: auto;
   }
 }
 
@@ -166,16 +171,6 @@ blockquote::after {
   }
 }
 
-.social-image-container {
-  display: flex;
-  flex-direction: column-reverse;
-}
-@media (min-width: 640px) {
-  .social-image-container {
-    display: block;
-  }
-}
-
 .header__nav {
   display: none;
   margin-block-start: var(--mg-300);
@@ -183,6 +178,10 @@ blockquote::after {
 @media (min-width: 640px) {
   .header__nav {
     display: block;
+    position: absolute;
+    margin-inline-end: var(--mg-600);
+    right: 0;
+    z-index: 1;
   }
 }
 
@@ -192,11 +191,16 @@ blockquote::after {
 @media (min-width: 640px) {
   .header__nav__link {
     margin-inline-end: var(--mg-600);
+    color: var(--cl-neutral-black);
   }
 }
 
-.header__nav__btn {
-  display: block;
+.nav__btn {
+  background-color: var(--cl-neutral-black);
+}
+
+.header__btn__text {
+  color: var(--cl-neutral-white);
 }
 
 .header__social__icon {
@@ -219,4 +223,11 @@ blockquote::after {
 .header__social__icon--github:hover, .header__social__icon--github:focus {
   color: var(--cl-neutral-white);
   background-color: #000;
+}
+
+.btn {
+  margin: auto;
+  padding-inline: var(--pd-500);
+  padding-block: var(--pd-300);
+  border-radius: 5px;
 }
