adding mebile menu toggle

--- a/public/css/components/index.css
+++ b/public/css/components/index.css
@@ -42,6 +42,8 @@
 
 .header__logo {
   margin-inline-start: auto;
+  margin-block-start: var(--mg-400);
+  padding-inline-end: var(--mg-400);
 }
 @media (min-width: 640px) {
   .header__logo {
@@ -68,50 +70,24 @@
 }
 
 .header__image {
-  max-width: 100%;
+  background-image: url(../../assets/img/paradise1.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
   margin-inline: auto;
   margin-block: var(--mg-500);
 }
 @media (min-width: 640px) {
   .header__image {
     position: absolute;
+    width: 100%;
+    max-width: 50%;
+    height: 600px;
     top: 0;
     right: 0;
-    width: 40%;
     margin-block: 0;
   }
-}
-
-.header__nav {
-  display: none;
-  margin-block-start: var(--mg-300);
-}
-@media (min-width: 640px) {
-  .header__nav {
-    display: block;
-    position: absolute;
-    margin-inline-end: var(--mg-600);
-    right: 0;
-    z-index: 1;
-  }
-}
-
-.header__nav__link {
-  margin-inline: var(--mg-200);
-}
-@media (min-width: 640px) {
-  .header__nav__link {
-    margin-inline-end: var(--mg-600);
-    color: var(--cl-neutral-black);
-  }
-}
-
-.nav__btn {
-  background-color: var(--cl-neutral-black);
-}
-
-.header__btn__text {
-  color: var(--cl-neutral-white);
 }
 
 .header__social__icon {
@@ -141,4 +117,39 @@
   padding-inline: var(--pd-500);
   padding-block: var(--pd-300);
   border-radius: 5px;
+}
+
+.header__nav {
+  visibility: hidden;
+  height: 0;
+  position: absolute;
+  display: flex;
+  margin-block-start: var(--mg-300);
+}
+@media (min-width: 640px) {
+  .header__nav {
+    display: block;
+    position: absolute;
+    margin-inline-end: var(--mg-600);
+    right: 0;
+    z-index: 1;
+  }
+}
+
+.header__nav__link {
+  margin-inline: var(--mg-200);
+}
+@media (min-width: 640px) {
+  .header__nav__link {
+    margin-inline-end: var(--mg-600);
+    color: var(--cl-neutral-black);
+  }
+}
+
+.nav__btn {
+  background-color: var(--cl-neutral-black);
+}
+
+.header__btn__text {
+  color: var(--cl-neutral-white);
 }
